add infinity custom  scrolling functionality  and  refresh button logic

--- a/src/assets/styles/Homepage.module.scss
+++ b/src/assets/styles/Homepage.module.scss
@@ -5,4 +5,15 @@
   }
 
 
-  
+  .storiscontent{
+    width: get-vw(1028px,1366);
+    min-height: get-vw(100px,1366);
+    display: flex;
+    background-color: #f7f7f7;
+    flex-direction: column;
+    .itemstori{
+        width: get-vw(1028px,1366);
+        min-height: get-vw(100px,1366);
+        border: 1px solid red;
+    }
+  }
